--- a/package.json
+++ b/package.json
@@ -60,10 +60,10 @@
     "next": "15.0.1",
     "next-themes": "^0.3.0",
     "prisma": "^6.2.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "8.10.1",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-resizable-panels": "^2.1.6",
     "recharts": "^2.13.2",
